completely reorganising project, starting with a new class GSearch

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/src/BusRoutes.java
-/src/BusRoutes.class
-/src/busRoutesTree.java
-/src/busRoutesTree.class
+/src/search/BusRoutes.java
+/src/search/BusRoutes.class
+/src/search/busRoutesTree.java
+/src/search/busRoutesTree.class
